# test_cities

./: .gitignore  README.md  pyproject.toml
city_app/: .dockerignore  .envsample  Dockerfile  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  pytest.ini
city_app/city_app/: asgi.py  settings.py  urls.py  wsgi.py
city_app/modules/cities/: admin.py  apps.py  models.py  routers.py  serializers.py  views.py
city_app/modules/cities/migrations/: 0001_initial.py
city_app/services/geocoder/: geocoding_service.py
